# capstone-snake-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeCache.txt  Makefile  SnakeGame  cmake_install.cmake
src/: controller.cpp  controller.h  game.cpp  game.h  leaderboard.cpp  leaderboard.h  main.cpp  obstacle.cpp  obstacle.h  renderer.cpp  renderer.h  scenario.h  snake.cpp  snake.h
src/leaderboards/: key_1.txt
